fix database examples

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -242,8 +242,8 @@ brew install --HEAD appwrite</code></pre>
         <td>The functions command allows you view, create and manage your Cloud Functions</td>
     </tr>
     <tr>
-        <td>database</td>
-        <td>The database command allows you to create structured collections of documents, query and filter lists of documents</td>
+        <td>databases</td>
+        <td>The databases command allows you to create structured collections of documents, query and filter lists of documents</td>
     </tr>
     <tr>
         <td>health</td>
