--- a/app/views/docs/pagination.phtml
+++ b/app/views/docs/pagination.phtml
@@ -14,13 +14,13 @@
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Databases } from "appwrite";
-const database = new Databases(client, "[DATABASE_ID]");  // 'client' comes from setup
+const databases = new Databases(client, "[DATABASE_ID]");  // 'client' comes from setup
                 
 // Page 1
-const page1 = await database.listDocuments('movies', [], 25, 0);
+const page1 = await databases.listDocuments('movies', [], 25, 0);
 
 // Page 2
-const page2 = await database.listDocuments('movies', [], 25, 25);
+const page2 = await databases.listDocuments('movies', [], 25, 25);
         </code></pre>
         </div>
     </li>
@@ -31,13 +31,13 @@ const page2 = await database.listDocuments('movies', [], 25, 25);
 
 void main() async {
     final client = Client();
-    final database = Database(client);
+    final databases = Databases(client, databaseId: '[DATABASE_ID]');
     try {
-        final page1 = await database.listDocuments(
+        final page1 = await databases.listDocuments(
             collectionId: 'movies',
             limit: 25,
             offset: 0);
-        final page2 = await database.listDocuments(
+        final page2 = await databases.listDocuments(
             collectionId: 'movies',
             limit: 25,
             offset: 25);
@@ -56,7 +56,7 @@ import android.os.Bundle
 import kotlinx.coroutines.GlobalScope
 import kotlinx.coroutines.launch
 import io.appwrite.Client
-import io.appwrite.services.Database
+import io.appwrite.services.Databases
 import io.appwrite.Query
 
 class MainActivity : AppCompatActivity() {
@@ -68,16 +68,16 @@ class MainActivity : AppCompatActivity() {
             .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
             .setProject("5df5acd0d48c2") // Your project ID
 
-        val database = Database(client)
+        val databases = Databases(client, "[DATABASE_ID]")
 
         GlobalScope.launch {
-            val page1 = database.listDocuments(
+            val page1 = databases.listDocuments(
                 collectionId = "[COLLECTION_ID]",
                 limit = 25,
                 offset = 0,
             )
 
-            val page2 = database.listDocuments(
+            val page2 = databases.listDocuments(
                 collectionId = "[COLLECTION_ID]",
                 limit = 25,
                 offset = 25,
@@ -97,9 +97,9 @@ func main() async throws {
       .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
       .setProject("my_project") // Your project ID
 
-    let database = Database(client)
+    let databases = Databases(client, "[DATABASE_ID]")
     // Page 1
-    var list = try await database.listDocuments(
+    var list = try await databases.listDocuments(
         collectionId: "[COLLECTION_ID]",
         limit: 25,
         offset: 0
@@ -107,7 +107,7 @@ func main() async throws {
     print(list.toMap())
 
     // Page 2
-    list = try await database.listDocuments(
+    list = try await databases.listDocuments(
         collectionId: "[COLLECTION_ID]",
         limit: 25,
         offset: 25
@@ -134,14 +134,14 @@ func main() async throws {
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Databases } from "appwrite";
-const database = new Databases(client, "[DATABASE_ID]");  // 'client' comes from setup
+const databases = new Databases(client, "[DATABASE_ID]");  // 'client' comes from setup
 
 // Page 1
-const page1 = await database.listDocuments('movies', [], 25, 0);
+const page1 = await databases.listDocuments('movies', [], 25, 0);
 const lastId = results.documents[results.documents.length - 1].$id;
 
 // Page 2
-const page2 = await database.listDocuments('movies', [], 25, 0, lastId);
+const page2 = await databases.listDocuments('movies', [], 25, 0, lastId);
         </code></pre>
         </div>
     </li>
@@ -152,15 +152,15 @@ const page2 = await database.listDocuments('movies', [], 25, 0, lastId);
 
 void main() async {
     final client = Client();
-    final database = Database(client);
+    final databases = Databases(client, databaseId: '[DATABASE_ID]');
     try {
-        final page1 = await database.listDocuments(
+        final page1 = await databases.listDocuments(
             collectionId: 'movies',
             limit: 25);
         final lastId = page1.documents[page1.documents.length - 1].$id;
 
         // Page 2
-        final page2 = await database.listDocuments(
+        final page2 = await databases.listDocuments(
             collectionId: 'movies',
             cursor: lastId);
     } on AppwriteException catch(e) {
@@ -178,7 +178,7 @@ import android.os.Bundle
 import kotlinx.coroutines.GlobalScope
 import kotlinx.coroutines.launch
 import io.appwrite.Client
-import io.appwrite.services.Database
+import io.appwrite.services.Databases
 import io.appwrite.Query
 
 class MainActivity : AppCompatActivity() {
@@ -190,17 +190,17 @@ class MainActivity : AppCompatActivity() {
             .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
             .setProject("5df5acd0d48c2") // Your project ID
 
-        val database = Database(client)
+        val databases = Databases(client, "[DATABASE_ID]")
 
         GlobalScope.launch {
-            val page1 = database.listDocuments(
+            val page1 = databases.listDocuments(
                 collectionId = "[COLLECTION_ID]",
                 limit = 25,
             )
             val lastId = page1.documents[page1.documents.length - 1].$id
 
             // Page 2
-            val page2 = database.listDocuments(
+            val page2 = databases.listDocuments(
                 collectionId = "[COLLECTION_ID]",
                 cursor = lastId,
             )    
@@ -219,10 +219,10 @@ func main() async throws {
       .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
       .setProject("my_project") // Your project ID
 
-    let database = Database(client)
+    let databases = Databases(client, "[DATABASE_ID]")
     
     // Page 1
-    var list = try await database.listDocuments(
+    var list = try await databases.listDocuments(
         collectionId: "[COLLECTION_ID]",
         limit: 25,
     )
@@ -230,7 +230,7 @@ func main() async throws {
     let lastId = list.documents[list.documents.count - 1].$id
             
     // Page 2
-    list = try await database.listDocuments(
+    list = try await databases.listDocuments(
         collectionId: "[COLLECTION_ID]",
         cursor: lastId,
     )
