fix typo docker-compose in upgrade.phtml

--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -74,7 +74,7 @@
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>cd appwrite/
-docker compose exec appwrite migrate</code></pre>
+docker-compose exec appwrite migrate</code></pre>
 </div>
 
 <p>The data migration can take longer depending on the amount of data your Appwrite instance contains. The Appwrite migration command uses multi-threading to speed up the process, meaning that adding more CPU cores can help speed up the process.</p>
