--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -648,6 +648,8 @@ class MainActivity : AppCompatActivity() {
 
 <p>When triggering a Cloud Function execution from the client, your users will be limited to a specific amount of execution per minute to make sure your Appwrite server is not being abused. The default limit is 60 calls per 1 minute. You can edit this limit using the server <a href="/docs/environment-variables#functions">environment variables</a>.</p>
 
+<p>Function execution times out after 15 seconds by default. This timeout can be configured per function in a function's settings or in <span class="tag">appwrite.json</span> up to a global maximum of 900 seconds. The global timeout maximum can be further increased by changing the <span class="tag">_APP_FUNCTIONS_TIMEOUT</span> environment variable.</p>
+
 <p>The response size of a Cloud Function is limited to 1MB. Reponses larger than 1MB should be handled using Appwrite's Databases or Storage service.</p>
 
 <h2><a href="/docs/functions#ignoreFiles" id="ignoreFiles">Ignore Files</a></h2>
