fix spelling error

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -650,7 +650,7 @@ class MainActivity : AppCompatActivity() {
 
 <p>Function execution times out after 15 seconds by default. This timeout can be configured per function in a function's settings or in <span class="tag">appwrite.json</span> up to a global maximum of 900 seconds. The global timeout maximum can be further increased by changing the <span class="tag">_APP_FUNCTIONS_TIMEOUT</span> environment variable.</p>
 
-<p>The response size of a Cloud Function is limited to 1MB. Reponses larger than 1MB should be handled using Appwrite's Databases or Storage service.</p>
+<p>The response size of a Cloud Function is limited to 1MB. Responses larger than 1MB should be handled using Appwrite's Databases or Storage service.</p>
 
 <h2><a href="/docs/functions#ignoreFiles" id="ignoreFiles">Ignore Files</a></h2>
 
