--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -646,11 +646,11 @@ class MainActivity : AppCompatActivity() {
 
 <p>Appwrite allows your project's end-users to execute Cloud Functions using client API or your client SDK. Execution is permitted to any user who has been granted the "execute" permission in your Cloud Functions settings page. The execution permission can accept any of the typical Appwrite <a href="/docs/permissions">permission types</a>.</p>
 
-<p>When triggering a Cloud Function execution from the client, your users will be limited to a specific amount of execution per minute to make sure your Appwrite server is not being abused. The default limit is 60 calls per 1 minute. You can edit this limit using the server <a href="/docs/environment-variables#functions">environment variables</a>.</p>
-
-<p>Function execution times out after 15 seconds by default. This timeout can be configured per function in a function's settings or in <span class="tag">appwrite.json</span> up to a global maximum of 900 seconds. The global timeout maximum can be further increased by changing the <span class="tag">_APP_FUNCTIONS_TIMEOUT</span> environment variable.</p>
+<p>When triggering function execution from Client SDKs, each user is limited to 60 API calls per minute to prevent abuse. Each execution has a default time limit of 15 seconds to prevent hanging functions from blocking resources. This timeout can be configured per function in a function's settings or in <span class="tag">appwrite.json</span> up to 900 seconds.</p>
 
 <p>The response size of a Cloud Function is limited to 1MB. Responses larger than 1MB should be handled using Appwrite's Databases or Storage service.</p>
+
+<p>You may find it necessary to change the default limits depending on use case. The API rate limit can be temporarily disabled by setting the <span class="tag">_APP_OPTIONS_ABUSE</span> variable to <span class="tag">disabled</span>. The execution time limit maximum of 900 seconds can be further increased by changing the <span class="tag">_APP_FUNCTIONS_TIMEOUT</span> environment variable.</p>
 
 <h2><a href="/docs/functions#ignoreFiles" id="ignoreFiles">Ignore Files</a></h2>
 
