--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -652,7 +652,7 @@ class MainActivity : AppCompatActivity() {
 
 <p>You may find it necessary to disable or increase rate limits depending on use case. The API rate limit can be disabled by setting the <span class="tag">_APP_OPTIONS_ABUSE</span> variable to <span class="tag">disabled</span>.</p> 
 
-<p>The maximum configurable timeout of 900 seconds can also be increased by changing the <span class="tag">_APP_FUNCTIONS_TIMEOUT</span> environment variable. This environment variable updates the global configurable maximum for execution timeout, but does not change existing existing configured timeout for individual functions.</p>
+<p>The maximum configurable timeout of 900 seconds can also be increased by changing the <span class="tag">_APP_FUNCTIONS_TIMEOUT</span> environment variable. This environment variable updates the global configurable maximum for execution timeout, but does not change the existing configured timeout for individual functions.</p>
 
 <h2><a href="/docs/functions#ignoreFiles" id="ignoreFiles">Ignore Files</a></h2>
 
