--- a/app/views/docs/rate-limits.phtml
+++ b/app/views/docs/rate-limits.phtml
@@ -81,12 +81,7 @@ Connection: close
 </div>
 
 <h2><a href="/docs/rate-limits#disable-limits" id="disable-limits">Disable Rate Limits</a></h2>
-<p>During development, you may need to frequently make requests to certain endpoints to test your code. You can temporarily disable rate limiting to prevent triggering rate limits during development.</p>
-<p>You can disable rate limiting by setting <span class="tag">_APP_OPTIONS_ABUSE</span> to <span class="tag">disabled</span> in the <b>.env</b> file found in your Appwrite install directory.</p>
-<p>After editing your docker-compose.yml or .env files, you will need to recreate your Appwrite stack by running the following compose command in your terminal:</p>
+<p>During development, you may need to frequently make requests to certain endpoints to test your code. You can temporarily disable rate limiting to prevent triggering rate limits during development.
+You can disable rate limiting using the <span class="tag">_APP_OPTIONS_ABUSE</span> environment variable. Make sure to re-enable rate limiting in production environments.</p>
 
-<div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d</code></pre>
-</div>
-
-<p>Once you finish testing your code, re-enable rate limiting by setting <span class="tag">_APP_OPTIONS_ABUSE</span> to <span class="tag">enabled</span> in the <b>.env</b> file.</p>
+<a href="/docs/environment-variables"><i class="icon-angle-circled-right"></i>Learn more about environment variables</a>
