--- a/app/views/docs/rate-limits.phtml
+++ b/app/views/docs/rate-limits.phtml
@@ -82,7 +82,7 @@ Connection: close
 
 <h2><a href="/docs/rate-limits#disable-limits" id="disable-limits">Disable Rate Limits</a></h2>
 <p>During development, you may need to frequently make requests to certain endpoints to test your code. You can temporarily disable rate limiting to prevent triggering rate limits during development.
-You can disable rate limiting using the <span class="tag">_APP_OPTIONS_ABUSE</span> environment variable. Make sure to re-enable rate limiting in production environments.</p>
+Disable rate limiting using the <span class="tag">_APP_OPTIONS_ABUSE</span> environment variable. Make sure to re-enable rate limiting in production environments.</p>
 
 <p>
 <a href="/docs/environment-variables"><i class="icon-angle-circled-right"></i>Learn more about environment variables</a>
