Add valid values for _APP_SMTP_SECURE

--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -12,7 +12,7 @@
 
 <p><b>_APP_SMTP_PORT</b> - SMTP server TCP port. Empty by default.</p>
 
-<p><b>_APP_SMTP_SECURE</b> - SMTP secure connection protocol. Empty by default, change to 'tls' if running on a secure connection.</p>
+<p><b>_APP_SMTP_SECURE</b> - SMTP secure connection protocol. Empty by default, change to 'tls' if running on a secure connection. Valid values are empty, 'tls', and 'ssl'.</p>
 
 <p><b>_APP_SMTP_USERNAME</b> - SMTP server user name. Empty by default.</p>
 
