Reformat file names as bold

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -65,13 +65,13 @@ $swiftVersion = $versions['swift'] ?? '';
     <li>
         <h3>Kotlin</h3>
         <div>
-            <p>Add maven repositories to your `build.gradle(.kts)` file</p>
+            <p>Add maven repositories to your <b>build.gradle(.kts)</b> file</p>
             <div class="ide margin-top-small" data-lang="gradle" data-lang-label="Gradle">
                 <pre class="line-numbers"><code class="prism language-gradle" data-prism>repositories {
     mavenCentral()
 }</code></pre>
             </div>
-            <p>Add Appwrite SDK under dependencies in your `build.gradle(.kts)` file</p>
+            <p>Add Appwrite SDK under dependencies in your <b>build.gradle(.kts)</b> file</p>
             <div class="ide margin-top-small" data-lang="gradle" data-lang-label="Gradle">
                 <pre class="line-numbers"><code class="prism language-gradle" data-prism>dependencies {
     implementation("io.appwrite:sdk-for-kotlin:<?php echo $this->escape($kotlinVersion); ?>")
