Add graphql to sidebar

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -75,6 +75,7 @@ $cols = [
                     <li><a href="/docs/databases">Databases</a></li>
                     <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
+                    <li><a href="/docs/graphql">GraphQL</a></li>
                     <li><a href="/docs/keys">API Keys</a></li>
                     <li><a href="/docs/webhooks">Webhooks</a></li>
                 </ul>
